@@ -26,6 +26,8 @@ Minor Changes:
 
 Commands:
  * Add /preserve switch to @chzone and @chzoneall, like @chown/preserve.
+ * Rooms/exits must now have an @COST attribute in order to be given
+   pennies. Use @cost <ancestor>=%0 to enable giving to all rooms/exits. [MG]
 
 Fixes:
  * Help fixes.
@@ -48,6 +50,7 @@ Fixes:
    built-in function. Reported by Time and Cheetah. [DC]
  * Nested @asserts/@breaks with no '=' would loop unintentionally.
    Reported by Minion. [MG]
+ * Fixed a couple of small bugs in give/@cost. [MG]
 
 
 Version 1.8.4 patchlevel 0                                 May 09,  2010
